# GhostPost-Project

./: pyproject.toml
ghostpost/: settings.py  urls.py
shostpost_app/: admin.py  apps.py  forms.py  urls.py
shostpost_app/migrations/: 0001_initial.py
shostpost_app/templates/: base.html
